Fixed spacing of selector component

--- a/src/index.css
+++ b/src/index.css
@@ -259,6 +259,7 @@ border-color: #211711;
   border: 1px solid #506308;
   font-size: 1rem;
   padding: .25rem;
+  padding-left: .75rem;
 }
 
 .avocado-select.dark {
@@ -273,6 +274,7 @@ border-color: #211711;
 
 .avocado-selector label {
   font-size: 1.2rem;
+  padding-right: .25rem;
 }
 
 /****---SLIDER STYLES---****/
